--- a/2021I_GBI6_ExamenFinal.Rmd
+++ b/2021I_GBI6_ExamenFinal.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "GBI6 - BIOINFORMÁTICA"
 subtitle: "EXAMEN FINAL"
-author: 'Apellido Nombre'
+author: 'Minango María'
 date: "`r Sys.Date()`"
 output:
   html_document:
