--- a/2021I_GBI6_ExamenFinal.Rmd
+++ b/2021I_GBI6_ExamenFinal.Rmd
@@ -168,9 +168,11 @@ cancertype_boxplots2
 
 ### [0.5 PUNTOS] 2.3 Guarde en el subdirectorio ```result``` el tercer plot de la lista ```cancertype_boxplots``` con el nombre ```boxplot3.png```. La definición de a figura debe ser de 300dpi. 
 ```{r boxplot3}
-# Escriba el código para guardar la tercera figura de la lista. 
-
-
+#El tercer plot de la lista ```cancertype_boxplots``` 
+cancertype_boxplots3 <- cancertype_boxplots2[[3]]
+cancertype_boxplots3
+#Guarde en el subdirectorio result el tercer plot de la lista cancertype_boxplots con el nombre boxplot3.png
+ggsave("results/boxplot3.png",dpi = 300)
 ```
 
 
